<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enter_job"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:shadowColor="@color/button_color"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="2"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/new_job_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/jobDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/enter_date_hint"
                android:inputType="date" />

            <EditText
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/temperature"
                android:inputType="number"/>

            <EditText
                android:id="@+id/pitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/pitch_hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/weatherView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weather_info"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/weatherSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/weather"/>

            <TextView
                android:id="@+id/musicSetView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/music_set_prompt"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/set_lst"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/playerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/attendance"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/player_lst"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:scrollbars="vertical"
                android:scrollbarStyle="outsideOverlay"/>

            <Button
                android:id="@+id/enterJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:onClick="enterJobToDB"
                android:text="@string/submit_job" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>